@@ -90,15 +90,17 @@ void rsvg_parse_style_pair (RsvgHandle *ctx, RsvgState *state,
 							const char *key, const char *val);
 void rsvg_parse_style (RsvgHandle *ctx, RsvgState *state, const char *str);
 void rsvg_parse_cssbuffer (RsvgHandle *ctx, const char * buff, size_t buflen);
-void rsvg_parse_style_attrs (RsvgHandle *ctx, const char * tag,
+
+void rsvg_parse_style_attrs (RsvgHandle *ctx, RsvgState *state, const char * tag,
 							 const char * klazz, const char * id,
 							 const xmlChar **atts);
 
 gdouble rsvg_viewport_percentage (gdouble width, gdouble height);
-
 void rsvg_pop_opacity_group (RsvgHandle *ctx, int opacity);
 void rsvg_push_opacity_group (RsvgHandle *ctx);
 gboolean rsvg_parse_transform (double dst[6], const char *src);
+
+RsvgState * rsvg_state_current (RsvgHandle *ctx);
 
 G_END_DECLS
 
